--- a/views/blocks/header.ejs
+++ b/views/blocks/header.ejs
@@ -1,7 +1,7 @@
 <header>
-  <div class="header">
-    <a href="/" id="logo">Pro Credit</a>
-    <a href="/applications" id="applicationsLink">Заявки</a>
-    <a href="/profile" id="profileLink">Профиль</a>
-  </div>
+    <div class="header">
+        <a href="/" id="logo">Pro Credit</a>
+        <a href="/applications" id="applications-link">Заявки</a>
+        <a href="/profile" id="profile-link">Профиль</a>
+    </div>
 </header>
