--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,7 +19,7 @@ body {
     background: #F6F7F8;
 }
 
-.buttonType1 {
+.button-type-1 {
     display: block;
     margin: 60px 0px -10px;
     padding: 12px 15px;
@@ -31,12 +31,12 @@ body {
     transition: all 0.4s ease-in-out;
 }
 
-.buttonType1:hover {
+.button-type-1:hover {
     box-shadow: 5px 5px var(--gray);
     transition: all 0.4s ease-in-out;
 }
 
-.buttonType1:active {
+.button-type-1:active {
     box-shadow: none;
     transform: translateX(10px);
     transform: translateY(5px);
@@ -64,47 +64,43 @@ body {
     font-size: 30px;
 }
 
-#applicationsLink {
+#applications-link {
     grid-column: 9;
     font-size: 16px;
     color: var(--gray);
 }
 
-#applicationsLink:hover {
+#applications-link:hover {
     color: var(--dark-gray);
 }
 
-#profileLink {
+#profile-link {
     grid-column: 10;
     font-size: 16px;
     color: var(--gray);
 }
 
-#profileLink:hover {
+#profile-link:hover {
     color: var(--dark-gray);
 }
 
 
 /*стиль страниц*/
 
-.mainPage,
-.autenticationPage,
-.registrationPage,
-.profilePage,
-.applicationsPage {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
+.main-page,
+.autentication-page,
+.registration-page,
+.profile-page,
+.applications-page {
+    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-items: center;
-    grid-gap: 30px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 80px;
-    margin-bottom: 200px;
+    margin: 80px auto 200px auto;
     max-width: 1300px;
 }
 
-.servicesBoxesContainer {
+.services-boxes-container {
     grid-column: 1 / 13;
     display: flex;
     justify-content: center;
@@ -129,7 +125,7 @@ body {
 
 /*стиль карточек на главной странице*/
 
-.servicesBoxes {
+.services-boxes {
     padding: 40px;
     margin: 30px;
     display: flex;
@@ -142,19 +138,19 @@ body {
     transition: all 0.4s ease-in-out;
 }
 
-.servicesBoxes:hover {
+.services-boxes:hover {
     box-shadow: 5px 5px #404040;
     transform: translateX(-10px);
     transform: translateY(-10px);
     transition: all 0.4s ease-in-out;
 }
 
-.servicesBoxes p {
+.services-boxes p {
     font-size: 18px;
     font-weight: 500;
 }
 
-.servicesBoxes img {
+.services-boxes img {
     margin-bottom: 40px;
     align-self: center;
     height: 120px;
@@ -167,8 +163,7 @@ body {
 
 /*стиль страницы авторизации*/
 
-#autenticationBox {
-    grid-column: 3 / 11;
+#autentication-box {
     padding: 60px 120px;
     height: 300px;
     width: 350px;
@@ -177,7 +172,7 @@ body {
     background-color: #ffffff;
 }
 
-#autenticationForm {
+#autentication-form {
     display: flex;
     justify-content: space-around;
     flex-direction: column;
@@ -198,7 +193,7 @@ body {
     transition: all 0.3s ease-in-out;
 }
 
-#newAccountButton {
+#new-account-button {
     margin-bottom: -20px;
     padding: 12px 15px;
     border: none;
@@ -207,19 +202,18 @@ body {
     background-color: #ffffff;
 }
 
-#newAccountButton a {
+#new-account-button a {
     color: var(--dark-gray);
 }
 
-#newAccountButton:hover {
+#new-account-button:hover {
     font-weight: 500;
 }
 
 
 /*стиль страницы регистрации*/
 
-#registrationBox {
-    grid-column: 1 / 13;
+#registration-box {
     padding: 50px 100px;
     height: 750px;
     width: 300px;
@@ -228,7 +222,7 @@ body {
     box-shadow: 0px 0px 50px rgba(1, 1, 1, 0.05);
 }
 
-#registrationForm {
+#registration-form {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -236,43 +230,43 @@ body {
     width: inherit;
 }
 
-.inputData {
+.input-data {
     display: flex;
     flex-direction: column;
     justify-content: center;
     flex-wrap: wrap;
 }
 
-.inputData div {
+.input-data div {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     width: 300px;
 }
 
-.personalData {
+.personal-data {
     height: 320px;
 }
 
-.loginData {
+.login-data {
     margin-top: 40px;
     height: 250px;
 }
 
-.inputButton {
+.input-button {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.subHeading {
+.sub-heading {
     margin-bottom: 20px;
     font-size: 19px;
-    font-weight: 500;
+    font-weight: 600;
     color: #282828;
 }
 
-#createAnAccount {
+#create-an-account {
     margin-bottom: 20px;
     width: 300px;
 }
@@ -306,42 +300,34 @@ body {
 
 /*стиль страницы профиля*/
 
-#profileBox {
-    grid-column: 3 / 11;
+#profile-box {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 60px 100px;
+    padding: 60px;
     height: 450px;
-    width: 600px;
+    width: 800px;
     border-radius: 30px;
     box-shadow: 0px 0px 50px rgba(1, 1, 1, 0.05);
     background-color: #ffffff;
 }
 
-.userData {
+.user-data {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    align-content: flex-start;
-    flex-wrap: wrap;
+    margin: 0px 0px 50px 60px;
 }
 
-.userData div {
+.user-data div {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    width: 230px;
-    height: 340px;
+    width: 280px;
+    height: 350px;
 }
 
-.userData p:first-child {
-    margin-bottom: 40px;
-}
-
-.dataCategory {
-    margin-top: 20px;
+.data-category {
+    margin-top: 40px;
     font-size: 17px;
     color: var(--dark-gray);
 }
@@ -352,25 +338,28 @@ body {
     color: var(--gray);
 }
 
-.profileBoxButtons {
+.profile-box-buttons {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    flex-wrap: wrap;
+    margin: 0px 50px;
 }
 
-#log-out {
+.additional-action-button {
     margin: 0;
-    width: 160px;
+    width: 150px;
     text-align: center;
-    color: var(--gray);
     background: none;
 }
 
-#log-out:hover {
+.additional-action-button:hover {
     font-size: 16.5px;
     box-shadow: none;
+}
+
+#log-out {
+    color: var(--gray);
 }
 
 #edit-personal-information {
@@ -379,29 +368,20 @@ body {
 }
 
 #delete-an-account {
-    margin: 0;
-    width: 160px;
-    text-align: center;
     color: var(--error-red);
-    background: none;
 }
 
-#delete-an-account:hover {
-    font-size: 16.5px;
-    box-shadow: none;
-}
-
-.unchanged{
+.unchanged {
     border: none;
 }
+
 
 /*конец стиля страницы профиля*/
 
 
 /*стиль страницы с заявками*/
 
-#applicationsBox {
-    grid-column: 3 / 11;
+#applications-box {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -444,7 +424,7 @@ tr {
     transition: all 0.35s ease-in-out;
 }
 
-.addButton {
+.add-button {
     position: relative;
     bottom: 0px;
     left: 750px;
@@ -458,7 +438,7 @@ tr {
     transition: all 0.35s ease-in-out;
 }
 
-.addButton:hover {
+.add-button:hover {
     background-color: var(--light-gray-2);
     transition: all 0.35s ease-in-out;
 }
@@ -466,7 +446,7 @@ tr {
 
 /*стиль модального окна*/
 
-.modal-addApplication {
+.modal-add-application {
     pointer-events: none;
     opacity: 0;
     position: fixed;
@@ -489,7 +469,7 @@ tr {
     background-color: rgba(0, 0, 0, 0.5);
 }
 
-.modalContent {
+.modal-content {
     margin-left: auto;
     margin-right: auto;
     display: flex;
@@ -506,13 +486,13 @@ tr {
     border-radius: 20px;
 }
 
-.closeModalButtonContainer {
+.close-modal-button-container {
     width: inherit;
     display: flex;
     justify-content: flex-end;
 }
 
-.closeModalButton {
+.close-modal-button {
     justify-self: flex-start;
     width: 40px;
     height: 40px;
@@ -526,16 +506,16 @@ tr {
     transition: all 0.35s ease-in-out;
 }
 
-.closeModalButton:hover {
+.close-modal-button:hover {
     background-color: var(--light-gray-2);
     transition: all 0.35s ease-in-out;
 }
 
-#addApplicationHeading {
+#add-application-heading {
     margin-bottom: 60px;
 }
 
-#applicationType {
+#application-type {
     font-size: 14px;
     color: var(--dark-gray);
     padding: 12px 15px;
@@ -544,12 +524,12 @@ tr {
     transition: all 0.3s ease-in-out;
 }
 
-#applicationType:hover {
+#application-type:hover {
     border: 1px solid var(--dark-gray);
     transition: all 0.3s ease-in-out;
 }
 
-#applicationForm {
+#application-form {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -557,14 +537,14 @@ tr {
     width: inherit;
 }
 
-.applicationTypeOption {
+.application-type-option {
     padding: 12px;
     font-size: 14px;
     color: var(--dark-gray);
     transition: all 0.35s ease-in-out;
 }
 
-.applicationTypeOption:hover {
+.application-type-option:hover {
     background: rgba(235, 235, 235, 1);
     transition: all 0.35s ease-in-out;
 }
