--- a/views/applicationsPage.ejs
+++ b/views/applicationsPage.ejs
@@ -14,42 +14,42 @@
 
 <body>
     <%- include('blocks/header.ejs') %>
-        <main class="applicationsPage">
-            <div class="modal-addApplication">
-                <div class="modalContent">
-                    <div class="closeModalButtonContainer">
-                        <button class="closeModalButton">x</button>
+        <main class="applications-page">
+            <div class="modal-add-application">
+                <div class="modal-content">
+                    <div class="close-modal-button-container">
+                        <button class="close-modal-button">x</button>
                     </div>
-                    <p class="subHeading" id="addApplicationHeading">
+                    <p class="sub-heading" id="add-application-heading">
                         <b>Создание заявки</b>
                     </p>
-                    <div class="creatingApplication">
-                        <form id="applicationForm" method="post">
-                            <select id="applicationType" name="applicationType">
-                <option class="applicationTypeOption">Кредит наличными</option>
-                <option class="applicationTypeOption">
+                    <div class="creating-application">
+                        <form id="application-form" method="post">
+                            <select id="application-type" name="applicationtype">
+                <option class="application-type-option">Кредит наличными</option>
+                <option class="application-type-option">
                   Оформление кредитной карты
                 </option>
-                <option class="applicationTypeOption">
+                <option class="application-type-option">
                   Кредит на образование
                 </option>
-                <option class="applicationTypeOption">Ипотека</option>
-                <option class="applicationTypeOption">Автокредит</option>
-                <option class="applicationTypeOption">
+                <option class="application-type-option">Ипотека</option>
+                <option class="application-type-option">Автокредит</option>
+                <option class="application-type-option">
                   Кредит на открытие бизнеса
                 </option>
               </select>
                             <input type="number" class="input" id="sum" name="sum" placeholder="Сумма" />
-                            <input type="date" class="input" id="dueDate" name="dueDate" placeholder="Срок" />
-                            <input class="buttonType1" type="submit" id="createAnApplication" value="Отправить" href="applicationsPage.html" />
+                            <input type="date" class="input" id="due-date" name="dueDate" placeholder="Срок" />
+                            <input class="button-type-1" type="submit" id="create-an-application" value="Отправить" href="applicationsPage.html" />
                         </form>
                     </div>
                 </div>
             </div>
             <h1 id="applications">Заявки</h1>
-            <div id="applicationsBox">
-                <table class="applicationsTable">
-                    <thead class="tableHeader">
+            <div id="applications-box">
+                <table class="applications-table">
+                    <thead class="table-header">
                         <tr>
                             <th>Номер</th>
                             <th>Тип</th>
@@ -59,18 +59,18 @@
                     </thead>
                     <tbody>
                         <% if(applicationsData.length!=0){
-            applicationsData.forEach(function(application) { %>
+        applicationsData.forEach(function(application) { %>
                             <tr>
-                                <td class="tableCell">
+                                <td class="table-cell">
                                     <% application.id %>
                                 </td>
-                                <td class="tableCell">
+                                <td class="table-cell">
                                     <% application.type %>
                                 </td>
-                                <td class="tableCell">
+                                <td class="table-cell">
                                     <% application.dueDate %>
                                 </td>
-                                <td class="tableCell">
+                                <td class="table-cell">
                                     <% application.status %>
                                 </td>
                             </tr>
@@ -81,7 +81,7 @@
                                 <% } %>
                     </tbody>
                 </table>
-                <button class="addButton" data-trigger>+</button>
+                <button class="add-button" data-trigger>+</button>
             </div>
         </main>
         <footer class="footer">
@@ -89,5 +89,6 @@
             <p id="author">2023</p>
         </footer>
 </body>
+<script type="text/javascript" src="script.js"></script>
 
 </html>
