--- a/views/mainPage.ejs
+++ b/views/mainPage.ejs
@@ -9,39 +9,39 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@400;500&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="/public/css/style.css" />
+    <link rel="stylesheet" href="/public/css/style.css" />
     <title>Главная | ProCredit</title>
 </head>
 
 <body>
     <%- include('blocks/header.ejs') %>
         <main>
-            <div class="mainPage">
+            <div class="main-page">
                 <h1 id="services">Услуги</h1>
-                <div class="servicesBoxesContainer">
-                    <div class="servicesBoxes" id="cashCreditBox">
-                        <p id="cashCreditTitle">Кредит наличными</p>
-                        <img id="cashCreditIcon" src="https://i.ibb.co/XFjNWr4/cash-icon.png" />
+                <div class="services-boxes-container">
+                    <div class="services-boxes" id="cash-credit-box">
+                        <p id="cash-credit-title">Кредит наличными</p>
+                        <img id="cash-credit-icon" src="/public/img/cashCreditIcon.svg" />
                     </div>
-                    <div class="servicesBoxes" id="creditCardBox">
-                        <p id="creditCardTitle">Оформление кредитной карты</p>
-                        <img id="creditCardIcon" src="https://i.ibb.co/y5cqn0c/credit-card-icon.png" />
+                    <div class="services-boxes" id="credit-card-box">
+                        <p id="credit-card-title">Оформление кредитной карты</p>
+                        <img id="credit-card-icon" src="/public/img/creditCardIcon.svg" />
                     </div>
-                    <div class="servicesBoxes" id="educationCreditBox">
-                        <p id="educationCreditTitle">Кредит на образование</p>
-                        <img id="educationCreditIcon" src="https://i.ibb.co/LtR8nr0/education-icon.png" />
+                    <div class="services-boxes" id="education-credit-box">
+                        <p id="education-credit-title">Кредит на образование</p>
+                        <img id="education-credit-icon" src="/public/img/educationCreditIcon.svg" />
                     </div>
-                    <div class="servicesBoxes" id="mortgageBox">
-                        <p id="mortgageTitle">Ипотека</p>
-                        <img id="mortgageIcon" src="https://i.ibb.co/dB5mJgT/mortgage-icon.png" />
+                    <div class="services-boxes" id="mortgage-box">
+                        <p id="mortgag-tTitle">Ипотека</p>
+                        <img id="mortgage-icon" src="/public/img/mortgageIcon.svg" />
                     </div>
-                    <div class="servicesBoxes" id="autoCreditBox">
-                        <p id="autoCreditTitle">Автокредит</p>
-                        <img id="autoCreditIcon" src="https://i.ibb.co/kBCbwtm/auto-icon.png" />
+                    <div class="services-boxes" id="autoCreditBox">
+                        <p id="auto-credit-title">Автокредит</p>
+                        <img id="auto-credit-icon" src="/public/img/autoCreditIcon.svg" />
                     </div>
-                    <div class="servicesBoxes" id="businessCreditBox">
-                        <p id="businessCreditTitle">Кредит на открытие бизнеса</p>
-                        <img id="businessCreditIcon" src="https://i.ibb.co/CW37Zmt/business-icon.png" />
+                    <div class="services-boxes" id="business-credit-box">
+                        <p id="business-credit-title">Кредит на открытие бизнеса</p>
+                        <img id="business-creditIcon" src="/public/img/businessCreditIcon.svg" />
                     </div>
                 </div>
             </div>
