--- a/views/autenticationPage.ejs
+++ b/views/autenticationPage.ejs
@@ -1,38 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@400;500&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="/public/css/style.css" />
     <title>Вход | ProCredit</title>
-</head>
+  </head>
 
-<body>
-    <%- include('blocks/header.ejs') %>
-        <main>
-            <div class="autentication-page">
-                <h1 id="autentication">Вход</h1>
-                <div id="autentication-box">
-                    <form id="autentication-form" method="post" action="/autenticated">
-                        <input type="text" class="input" id="login" name="autenticationLogin" placeholder="Логин" />
-                        <input type="password" class="input" id="password" name="autenticationPassword" placeholder="Пароль" />
-                        <input class="button-type-1" type="submit" id="submit" value="Войти" />
-                        <button id="new-account-button">
+  <body>
+    <main>
+      <%- include('blocks/header.ejs') %>
+      <div class="autentication-page">
+        <h1 id="autentication">Вход</h1>
+        <div class="autentication-box">
+          <form id="autentication-form" method="post" action="/autenticated">
+            <input
+              type="text"
+              class="input"
+              name="autenticationLogin"
+              placeholder="Логин" />
+            <input
+              type="password"
+              class="input"
+              name="autenticationPassword"
+              placeholder="Пароль" />
+            <input class="button-type-1" type="submit" value="Войти" />
+            <button class="unbordered-button">
               <a href="/registration">Зарегистрироваться</a>
             </button>
-                    </form>
-                </div>
-            </div>
-        </main>
-        <footer class="footer">
-            <p id="author">Disigned by @perpetuumm0bi1e</p>
-            <p id="author">2023</p>
-        </footer>
-</body>
-
+          </form>
+        </div>
+      </div>
+    </main>
+    <footer class="footer">
+      <p id="author">Disigned by @perpetuumm0bi1e</p>
+      <p id="author">2023</p>
+    </footer>
+  </body>
+  <script type="text/javascript" src="/public/script.js"></script>
 </html>
