--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800&display=swap');
+
 :root {
     --dark-gray: #282828;
     --gray: #636363;
+    --gray-2: #c7c7c7;
     --light-gray: #ebebeb;
     --light-gray-2: #e1e1e1;
+    --white: #fefefe;
     --error-red: #D01919;
 }
 
@@ -21,12 +26,12 @@ body {
 
 .button-type-1 {
     display: block;
-    margin: 60px 0px -10px;
+    margin: 100px 0px 10px 0px;
     padding: 12px 15px;
     border: none;
     border-radius: 10px;
     font-size: 16px;
-    color: #ffffff;
+    color: var(--white);
     background-color: var(--dark-gray);
     transition: all 0.4s ease-in-out;
 }
@@ -38,8 +43,7 @@ body {
 
 .button-type-1:active {
     box-shadow: none;
-    transform: translateX(10px);
-    transform: translateY(5px);
+    transform: translate(5px, 5px);
     transition: all 0.4s ease-in-out;
 }
 
@@ -47,13 +51,22 @@ body {
 /*стиль хедера*/
 
 .header {
+    position: sticky;
+    top: 0;
+    z-index: 10;
     display: grid;
     align-items: center;
     grid-template-columns: repeat(12, 1fr);
-    grid-gap: 20px;
-    height: 80px;
-    background-color: white;
+    height: 70px;
+    width: 100vw;
+    background: var(--white);
     box-shadow: 0px 0px 50px rgba(1, 1, 1, 0.05);
+    border-radius: 0px 0px 5px 5px;
+    transition: all .6s ease-in-out;
+}
+
+.header_hidden {
+    transform: translateY(-100%);
 }
 
 #logo {
@@ -61,12 +74,12 @@ body {
     font-family: 'Unbounded', cursive;
     color: var(--dark-gray);
     letter-spacing: 2px;
-    font-size: 30px;
+    font-size: 25px;
 }
 
 #applications-link {
     grid-column: 9;
-    font-size: 16px;
+    font-size: 15px;
     color: var(--gray);
 }
 
@@ -76,7 +89,7 @@ body {
 
 #profile-link {
     grid-column: 10;
-    font-size: 16px;
+    font-size: 15px;
     color: var(--gray);
 }
 
@@ -95,13 +108,12 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-items: center;
-    margin: 80px auto 200px auto;
+    margin: 80px auto 0px auto;
     max-width: 1300px;
+    height: 100vh;
 }
 
 .services-boxes-container {
-    grid-column: 1 / 13;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -115,7 +127,6 @@ body {
 #registration,
 #profile,
 #applications {
-    grid-column: 5 / 9;
     margin-bottom: 80px;
     color: var(--dark-gray);
     font-size: 40px;
@@ -133,7 +144,7 @@ body {
     justify-content: space-between;
     height: 300px;
     width: 200px;
-    background-color: #ffffff;
+    background-color: var(--white);
     border-radius: 30px;
     transition: all 0.4s ease-in-out;
 }
@@ -161,30 +172,47 @@ body {
 /*конец стиля карточек на главной странице*/
 
 
-/*стиль страницы авторизации*/
+/*стиль страницы аутентификации*/
 
-#autentication-box {
-    padding: 60px 120px;
-    height: 300px;
-    width: 350px;
+.autentication-box,
+.registration-box,
+.profile-box {
+    padding: 50px 100px;
+    height: auto;
+    width: 300px;
     border-radius: 30px;
     box-shadow: 0px 0px 50px rgba(1, 1, 1, 0.05);
-    background-color: #ffffff;
+    background-color: var(--white);
 }
-
-#autentication-form {
+.error-box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+    margin: 50px 0px 10px 0px;
+    height: auto;
+    border-radius: 10px;
+    font-size: 14px;
+    color: var(--error-red);
+    background: var(--light-gray);
+    opacity: .7;
+}
+#autentication-form,
+#registration-form {
     display: flex;
     justify-content: space-around;
     flex-direction: column;
-    height: inherit;
+    margin-top: 20px;
+    height: auto;
     width: inherit;
 }
 
 .input {
     padding: 12px 15px;
+    margin: 10px 0px;
     font-size: 14px;
     border-radius: 5px;
-    border: 1px solid #c7c7c7;
+    border: 1px solid var(--gray-2);
     transition: all 0.3s ease-in-out;
 }
 
@@ -193,89 +221,45 @@ body {
     transition: all 0.3s ease-in-out;
 }
 
-#new-account-button {
-    margin-bottom: -20px;
+.unbordered-button {
     padding: 12px 15px;
     border: none;
     font-size: 16px;
     color: var(--dark-gray);
-    background-color: #ffffff;
+    background-color: var(--white);
 }
 
-#new-account-button a {
+.unbordered-button a {
     color: var(--dark-gray);
 }
 
-#new-account-button:hover {
+.unbordered-button:hover {
     font-weight: 500;
 }
 
 
 /*стиль страницы регистрации*/
 
-#registration-box {
-    padding: 50px 100px;
-    height: 750px;
-    width: 300px;
-    border-radius: 40px;
-    background-color: #ffffff;
-    box-shadow: 0px 0px 50px rgba(1, 1, 1, 0.05);
-}
-
-#registration-form {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: inherit;
-    width: inherit;
-}
-
-.input-data {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
 .input-data div {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     width: 300px;
-}
-
-.personal-data {
-    height: 320px;
 }
 
 .login-data {
     margin-top: 40px;
-    height: 250px;
-}
-
-.input-button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .sub-heading {
     margin-bottom: 20px;
     font-size: 19px;
     font-weight: 600;
-    color: #282828;
+    color: var(--dark-gray);
 }
-
-#create-an-account {
-    margin-bottom: 20px;
-    width: 300px;
-}
-
 
 /*стиль футера*/
 
 .footer {
-    margin-top: 500px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -291,7 +275,7 @@ body {
 #author {
     letter-spacing: 2px;
     font-size: 12px;
-    color: #F6F7F8;
+    color: var(--white);
 }
 
 
@@ -300,30 +284,20 @@ body {
 
 /*стиль страницы профиля*/
 
-#profile-box {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 60px;
-    height: 450px;
-    width: 800px;
-    border-radius: 30px;
-    box-shadow: 0px 0px 50px rgba(1, 1, 1, 0.05);
-    background-color: #ffffff;
+.profile-box {
+    width: 700px;
 }
 
 .user-data {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    margin: 0px 0px 50px 60px;
 }
 
 .user-data div {
     display: flex;
     flex-direction: column;
     width: 280px;
-    height: 350px;
 }
 
 .data-category {
@@ -343,7 +317,7 @@ body {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    margin: 0px 50px;
+    margin: 100px auto 0px auto;
 }
 
 .additional-action-button {
@@ -366,13 +340,8 @@ body {
     margin: 0;
     width: 200px;
 }
-
 #delete-an-account {
     color: var(--error-red);
-}
-
-.unchanged {
-    border: none;
 }
 
 
@@ -390,7 +359,7 @@ body {
     width: 800px;
     border-radius: 30px;
     box-shadow: 0px 0px 50px rgba(1, 1, 1, 0.05);
-    background-color: white;
+    background-color: var(--white);
 }
 
 .applicationsTable {
@@ -482,7 +451,7 @@ tr {
     max-width: 400px;
     max-height: 500px;
     padding: 60px 80px;
-    background-color: #fff;
+    background-color: var(--white);
     border-radius: 20px;
 }
 
