--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@200;300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800&display=swap');
-
 :root {
     --dark-gray: #282828;
     --gray: #636363;
@@ -26,7 +25,7 @@ body {
 
 .button-type-1 {
     display: block;
-    margin: 100px 0px 10px 0px;
+    margin: 120px 0px 10px 0px;
     padding: 12px 15px;
     border: none;
     border-radius: 10px;
@@ -184,19 +183,22 @@ body {
     box-shadow: 0px 0px 50px rgba(1, 1, 1, 0.05);
     background-color: var(--white);
 }
-.error-box{
+
+.error-box {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 15px;
-    margin: 50px 0px 10px 0px;
+    padding: 7.5px 0px;
+    margin: 80px auto -100px auto;
     height: auto;
+    width: 300px;
     border-radius: 10px;
     font-size: 14px;
     color: var(--error-red);
     background: var(--light-gray);
     opacity: .7;
 }
+
 #autentication-form,
 #registration-form {
     display: flex;
@@ -256,6 +258,7 @@ body {
     font-weight: 600;
     color: var(--dark-gray);
 }
+
 
 /*стиль футера*/
 
@@ -317,7 +320,7 @@ body {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    margin: 100px auto 0px auto;
+    margin: 120px auto 0px auto;
 }
 
 .additional-action-button {
@@ -340,6 +343,7 @@ body {
     margin: 0;
     width: 200px;
 }
+
 #delete-an-account {
     color: var(--error-red);
 }
