application operaions have been set up

--- a/views/profilePage.ejs
+++ b/views/profilePage.ejs
@@ -15,7 +15,7 @@
             <%- include('blocks/header.ejs') %>
             <div class="profile-page">
             <h1 id="profile">Профиль</h1>
-            <div class="profile-box">
+            <div class="profile-box box-animation">
                 <form method="post" action="/editAccount">
                     <div class="user-data">
                         <div class="profile-personal-data">
