--- a/public/css/style.css
+++ b/public/css/style.css
@@ -97,7 +97,7 @@ body {
 }
 
 
-/*стиль страниц*/
+/*стили страниц*/
 
 .main-page,
 .autentication-page,
@@ -109,7 +109,8 @@ body {
     align-items: center;
     margin: 80px auto 0px auto;
     max-width: 1300px;
-    height: 100vh;
+    height: auto;
+    min-height: 100vh;
 }
 
 .services-boxes-container {
@@ -135,7 +136,7 @@ body {
 
 /*стиль карточек на главной странице*/
 
-.services-boxes {
+.service-box {
     padding: 40px;
     margin: 30px;
     display: flex;
@@ -147,20 +148,29 @@ body {
     border-radius: 30px;
     transition: all 0.4s ease-in-out;
 }
-
-.services-boxes:hover {
+.service-box:hover {
     box-shadow: 5px 5px #404040;
     transform: translateX(-10px);
     transform: translateY(-10px);
     transition: all 0.4s ease-in-out;
 }
+.box-animation{
+    opacity: 0;
+    transform: translateY(10%);
+}
+.box-animation-show{
+    opacity: 1;
+    transform: translateY(0%);
+    transition: all 1s;
+}
 
-.services-boxes p {
+
+.service-box p {
     font-size: 18px;
     font-weight: 500;
 }
 
-.services-boxes img {
+.service-box img {
     margin-bottom: 40px;
     align-self: center;
     height: 120px;
@@ -172,7 +182,7 @@ body {
 
 
 /*стиль страницы аутентификации*/
-
+.applications-box,
 .autentication-box,
 .registration-box,
 .profile-box {
@@ -269,6 +279,7 @@ body {
     align-items: center;
     background-color: var(--dark-gray);
     height: 120px;
+    margin-top: 300px;
 }
 
 .footer>p:first-child {
@@ -354,29 +365,25 @@ body {
 
 /*стиль страницы с заявками*/
 
-#applications-box {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 60px 100px;
-    height: 450px;
-    width: 800px;
-    border-radius: 30px;
-    box-shadow: 0px 0px 50px rgba(1, 1, 1, 0.05);
-    background-color: var(--white);
+.applications-box {
+    padding: 60px 80px;
+    width: 900px;
 }
 
 .applicationsTable {
+    margin: 0px auto;
     max-height: 400px;
-    border: 2px solid var(--gray);
-    border: 0px;
-    border-spacing: 25px;
+    width: inherit;
+    border: none;
+    border-spacing: 0px;
     border-collapse: collapse;
 }
 
 td,
 th {
-    padding: 15px 20px;
+    width: 25%;
+    padding: 20px 30px;
+    border: none;
     text-align: left;
     vertical-align: baseline;
 }
@@ -393,14 +400,15 @@ th {
 }
 
 tr {
-    border-radius: 15px;
+    border: none;
     transition: all 0.35s ease-in-out;
 }
 
 .add-button {
     position: relative;
     bottom: 0px;
-    left: 750px;
+    left: 850px;
+    margin-top: 100px;
     width: 50px;
     height: 50px;
     border: none;
@@ -420,43 +428,40 @@ tr {
 /*стиль модального окна*/
 
 .modal-add-application {
-    pointer-events: none;
-    opacity: 0;
-    position: fixed;
     z-index: -1;
+    position: fixed;
     top: 0;
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 30px;
     width: 100vw;
     height: 100vh;
-    padding: 30px;
     background-color: rgba(0, 0, 0, 0);
+    pointer-events: none;
+    opacity: 0;
     transition: opacity .3s, background-color .5s;
 }
 
 .is-open {
+    z-index: 11;
     opacity: 1;
     pointer-events: all;
-    z-index: 1;
     background-color: rgba(0, 0, 0, 0.5);
 }
 
 .modal-content {
-    margin-left: auto;
-    margin-right: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
     overflow: auto;
-    width: 100%;
+    width: 280px;
     height: 100%;
-    max-width: 400px;
-    max-height: 500px;
-    padding: 60px 80px;
-    background-color: var(--white);
+    max-height: 450px;
+    margin: 0px auto;
+    padding: 60px 100px;
     border-radius: 20px;
+    background-color: var(--white);
 }
 
 .close-modal-button-container {
@@ -466,11 +471,12 @@ tr {
 }
 
 .close-modal-button {
-    justify-self: flex-start;
+    position: absolute;
+    margin: -15px -50px 0px 0px;
     width: 40px;
     height: 40px;
     border: none;
-    border-radius: 100px;
+    border-radius: 100%;
     font-size: 20px;
     font-weight: 500;
     color: var(--dark-gray);
@@ -505,7 +511,6 @@ tr {
 #application-form {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     height: 300px;
     width: inherit;
 }
