--- a/views/mainPage.ejs
+++ b/views/mainPage.ejs
@@ -14,29 +14,29 @@
       <div class="main-page">
         <h1 id="services">Услуги</h1>
         <div class="services-boxes-container">
-          <div class="services-boxes" id="cash-credit-box">
+          <div class="service-box box-animation" id="cash-credit-box">
             <p id="cash-credit-title">Кредит наличными</p>
             <img id="cash-credit-icon" src="/public/img/cashCreditIcon.svg" />
           </div>
-          <div class="services-boxes" id="credit-card-box">
+          <div class="service-box box-animation" id="credit-card-box">
             <p id="credit-card-title">Оформление кредитной карты</p>
             <img id="credit-card-icon" src="/public/img/creditCardIcon.svg" />
           </div>
-          <div class="services-boxes" id="education-credit-box">
+          <div class="service-box box-animation" id="education-credit-box">
             <p id="education-credit-title">Кредит на образование</p>
             <img
               id="education-credit-icon"
               src="/public/img/educationCreditIcon.svg" />
           </div>
-          <div class="services-boxes" id="mortgage-box">
+          <div class="service-box box-animation" id="mortgage-box">
             <p id="mortgag-tTitle">Ипотека</p>
             <img id="mortgage-icon" src="/public/img/mortgageIcon.svg" />
           </div>
-          <div class="services-boxes" id="autoCreditBox">
+          <div class="service-box box-animation" id="autoCreditBox">
             <p id="auto-credit-title">Автокредит</p>
             <img id="auto-credit-icon" src="/public/img/autoCreditIcon.svg" />
           </div>
-          <div class="services-boxes" id="business-credit-box">
+          <div class="service-box box-animation" id="business-credit-box">
             <p id="business-credit-title">Кредит на открытие бизнеса</p>
             <img
               id="business-creditIcon"
